Fix Contact Us button in dark mode hover state
When I hovered over the Contact Us button in dark
mode, the button disappeared into the nav bar
because the colors were too similar. I updated the
button color when hovering to use a lighter blue.

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -1002,6 +1002,15 @@
         }
       }
     }
+    .cs-button-solid {
+      &:before {
+        background: var(--buttonHoverDark); /* Change the transition color */
+      }
+
+      &:hover {
+        color: #fff; /* Ensure text remains visible */
+      }
+    }
   }
 }
 
